--- a/style.css
+++ b/style.css
@@ -1,38 +1,531 @@
+/* FONTS */
+    
+.kettler {
+    font-family: "kettler-web", monospace;
+        font-weight: 400;
+    font-style: normal;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.transducer {
+    font-family: transducer-variable, sans-serif;
+}
+
+.ext {
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 400;
+}
+
+.ext-bold {
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+}
+
+/* FONT STYLING */
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "kettler-web";
+    margin: 0;
+    padding: 0;
+    color: #0000FF;
+    -webkit-text-stroke: 3px #00FF60;
+    paint-order: stroke fill;
+    background-color: black;
+}
+
+h1 {
+    font-size: 60px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+    color: black;
+    padding: 0;
+    margin: 0;
+    -webkit-text-stroke: 7px #00FF60;
+}
+
+h2 {
+    font-size: 40px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+    
+}
+
+h3 {
+    font-size: 30px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+    padding: 0;
     margin: 0;
 }
 
+h4 {
+    font-size: 20px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+    padding: 0;
+    margin: 0;
+    transition: ease .3s;
+}
+
+h5 {
+    font-size: 16px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 400;
+    padding: 0;
+    margin: 0;
+}
+
+p, li {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    color: #00FF60;
+    -webkit-text-stroke: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+/* RESPONSIVE FONT RESIZE */
+@media (min-width: 744px) {
+    h1 {
+        font-size: 100px;
+    }
+}
+
+/* MAIN LINKS */
+a {
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    transition: ease .3s;
+}
+
+a:visited {
+    color: #0000FF;
+    -webkit-text-stroke: 3px #00FF60;
+    paint-order: stroke fill;
+}
+
+a:hover, .work-container h4:hover {
+    color: #3939AA;
+    filter: drop-shadow(0 0 5px #FF0C00);
+    cursor: pointer;
+}
+
+/* NAV--MOBILE */
 nav {
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
     padding: 5px 20px;
+    height: 50px;
 }
 
-.nav-right {
+a #ig-icon {
+    width: 25px;
+    height: 25px;
+    fill: #0000ff;
+    background-color: #00FF60;
+    border-radius: 7px;
+    margin: 0;
+    padding: 0;
+}
+
+/* NAV--HIDE DESKTOP NAV ON MOBILE SCREENS */
+.desktop-menu {
+    display: none;
+    height: 100%;
+}
+
+.nav-left {
     display: flex;
-    flex-direction: row;
-    gap: 20px;
     align-items: center;
-    position: relative;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-.nav-right img {
-    height: 20px;
-    max-height: 100%;
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+    position: fixed;
+    top: 61px;
+    padding: 10px 10px 7px 0;
+    border-right: 1px solid #00FF60;
+    border-top: none;
+    right: -100%;
+    transition: 0.3s ease-in-out;
+}
+
+.mobile-menu-visible {
+    right: 20px;
+}
+
+.hamburger {
+    display: block;
+    cursor: pointer;
+}
+
+/* NAV--MOBILE HAMBURGER STYLING */
+.bar-top, .bar-bottom {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background-color: #0000ff;
+    border: 1px solid #00FF60;
+    border-radius: 10px;
+}
+
+.bar-top-x {
+    transform: translateY(5px) rotate(45deg);
+}
+
+.bar-bottom-x {
+    transform: translateY(-5px) rotate(-45deg);
 }
 
 .nav-left img {
-    height: 40px
+    max-height: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
+.nav-left a {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.work-mobile {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+    position: relative;
+    right: 0;
+    padding-bottom: 15px;
+    transition: 0.3s ease-in-out;
+}
+
+.work-mobile-active {
+    display: flex;
+}
+
+.show-menu {
+    display: none;
+}
+
+/* NAV--RESPONSIVE */
 @media (min-width: 744px) {
+    .desktop-menu {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        align-items: center;
+    }
+    .mobile-nav {
+        display: none;
+    }
+    .mobile-menu {
+        display: none;
+    }
+
+    .work-container {
+        position: relative;
+    }
+
+    .work-desktop {
+        display: none;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 10px;
+        position: absolute;
+        padding: 05px 10px;
+        top: 40px;
+        right: -10px;
+        border-right: 1px solid #00FF60;
+        transition: 0.3s ease-in-out;
+    }
+
+    .work-desktop-active {
+        display: flex;
+    }
     
 }
 
 @media (min-width: 1080px) {
 
+}
+
+/* HOMEPAGE--HERO */
+.hp-hero-section {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    height: min-content;
+    overflow: hidden;
+}
+
+#hp-hero-video {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    height: 100%;
+    margin-left: 50vw;
+    transform: translate(-50%);
+    overflow-x: hidden;
+}
+
+.hero-text-container {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.hero-left, .hero-right {
+    pointer-events: none;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease-in-out;
+}
+
+.hero-right a, .hero-left a {
+    pointer-events: auto;
+}
+
+.hero-left:hover, .hero-right:hover {
+    background-color: #0000FF;
+}
+
+.hero-text-container a:hover {
+    color: #0000ff;
+    filter: none;
+}
+
+.hp-hero-section h1 {
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+}
+
+/* HOMEPAGE--RESPONSIVE HERO */
+@media (min-width: 744px) {
+    .hero-text-container h5 {
+        font-size: 40px;
+    }
+}
+
+/* HOMEPAGE--ABOUT */
+.about-section {
+    margin-top: 95vh;
+    margin-bottom: 20px;
+    padding: 60px 20px;
+    gap: 20px;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.astro-q p, .astro-q div {
+    display: inline;
+}
+
+.astro-buttons {
+    padding: 0 10px;
+}
+
+.astro-q button {
+    background: none;
+    color: #00FF60;
+    border: none;
+    border-bottom: 1px solid #00FF60;
+    -webkit-text-stroke: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.astro-q button:hover {
+    color: #FF0C00;
+    border-bottom: none;
+    cursor: pointer;
+}
+
+/* HOMEPAGE--RESPONSIVE ABOUT */
+@media (min-width: 744px) {
+    .about-section{
+        padding: 100px 10%;
+        display: flex;
+        align-items: center;
+    }
+
+    .about-text {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+}
+/* HOMEPAGE--PROJECT SECTION */
+
+.hp-project-section {
+    background-color: white;
+    padding: 0;
+    width: 100%;
+}
+
+.hp-project {
+    display: flex;
+    /* flex-direction: column; */
+    padding: 20px;
+    /* width: 100%; */
+    overflow: hidden;
+    max-height: 100vh;
+}
+
+.hp-project img {
+    max-width: 100%;
+    max-height: 70vh;
+}
+
+.hp-project h2 {
+    -webkit-text-stroke: 0;
+    transition: ease .3s;
+    width: 80%;
+}
+
+.hp-project:hover {
+    color: #0000FF;
+    background-color: #0000FF;
+    filter: none;
+    cursor: pointer;    
+}
+
+.hp-project:hover h2 {
+    -webkit-text-stroke: 3px #00FF60;
+}
+
+.hp-project:hover img {
+    outline: 1px solid #00FF60;
+}
+
+/* HOMEPAGE--RESPONSIVE PROJECT SECTION */
+@media (min-width: 915px) {
+    .hp-project-section{
+        display: block;
+    }
+
+    .hp-project {
+        display: block;
+    }
+
+    .hp-project-spacer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px 10%;
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+
+    .hp-project img {
+        width: fit-content;
+        max-height: 80vh;
+    }
+    
+    /* .hp-project h2 {
+        width: 100%;
+    } */
+
+    .hp-project:last-child .hp-project-spacer {
+        flex-direction: row-reverse;
+    }
+
+    .hp-project:last-child h2 {
+        text-align: right;
+    }
+}
+
+/* FOOTER */
+
+footer {
+    padding: 20px 0;
+}
+
+.footer-grid {
+    padding: 0 20px 20px 20px;
+}
+
+.footer-grid img{
+    height: 60px;
+    padding-top: 10px;
+}
+
+.foot-col {
+    display: grid;
+    grid-auto-rows: 30px;
+}
+
+footer a {
+    font-size: 20px;
+    font-family: transducer-variable;
+    font-variation-settings: "slnt" 0, "wdth" 200, "wght" 700;
+    color: #00FF60;
+    padding: 0;
+    margin: 0;
+    -webkit-text-stroke: 0;
+}
+
+footer a:visited {
+    color: #00FF60;
+}
+
+footer a:hover {
+    color: #FF0C00;
+    filter: none;
+}
+
+.copyright {
+    padding: 20px 0 0 20px;
+    border-top: 1px solid #00FF60;
+}
+
+.copyright {
+    font-family: transducer-variable;
+    color: #00FF60;
+    -webkit-text-stroke: 0;
+    font-size: 12px;
+}
+
+/* FOOTER--RESPONSIVE */
+@media (min-width: 600px) {
+    .footer-grid {
+        display: flex;
+        justify-content: space-between;
+    }
+    
 }
