--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ body {
     background-color: #0000FF;
 }
 
+.white-background {
+    background-color: white;
+    color: #0000FF;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: transducer-variable;
     padding: 0;
@@ -381,6 +386,11 @@ footer {
     padding: 20px 0;
 }
 
+.blue-footer {
+    color: #00FF60;
+    background-color: #0000FF;
+}
+
 .footer-flex {
     padding: 0 20px 20px 20px;
     display: flex;
@@ -709,4 +719,87 @@ textarea {
     textarea {
         width: 600px;
     }
+}
+
+/* WORK PAGES */
+
+.work-hero-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #0000FF;
+}
+
+.work-hero-img {
+    max-width: 100%;
+    max-height: 90vh;
+    transition: ease .3s;
+}
+
+.work-hero-text {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    transition: ease .3s;
+}
+
+.work-img-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+    grid-auto-flow: dense;
+    gap: 20px;
+    padding: 20px;
+    transition: ease .3s;
+}
+
+.work-img-grid img {
+    width: 100%;
+    transition: ease .3s;
+}
+
+/* WORK PAGES--RESPONSIVE */
+
+@media (min-width: 390px) {
+    .work-hero-container {
+        padding-left: 0;
+    }
+
+    .work-hero-container {
+        grid-template-columns: 1fr 1fr;
+        padding-right: 20px;
+    }
+    
+}
+
+@media (min-width: 744px) {
+    .work-hero-text {
+        justify-content: center;
+    }
+
+    .work-img-grid {
+        padding: 20px 10%;
+    }
+
+}
+
+@media (min-width: 1080px) {
+    .work-hero-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding-right: 20%;
+    }
+    
+    .work-img-grid {
+        padding: 20px 20%;
+    }
+}
+
+@media (min-width: 1280px) {
+    .work-hero-container {
+        padding-right: 40%;
+    }
+    
 }
